--- a/MFCApplication4/MFCApplication4.vcxproj.filters
+++ b/MFCApplication4/MFCApplication4.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="Crypto.h">
       <Filter>头文件\Crypto</Filter>
     </ClInclude>
+    <ClInclude Include="DoubleLinkedList.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCApplication4.cpp">
@@ -97,6 +100,9 @@
     </ClCompile>
     <ClCompile Include="Crypto.cpp">
       <Filter>源文件\Crypto</Filter>
+    </ClCompile>
+    <ClCompile Include="DoubleLinkedList.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
