--- a/MuaClient/MuaClient.vcxproj
+++ b/MuaClient/MuaClient.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClCompile Include="AES.cpp" />
     <ClCompile Include="Crypto.cpp" />
+    <ClCompile Include="Login.cpp" />
     <ClCompile Include="Misc.cpp" />
     <ClCompile Include="MuaClient.cpp" />
     <ClCompile Include="Packet.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="HPSocket\HPSocket.h" />
     <ClInclude Include="HPSocket\HPTypeDef.h" />
     <ClInclude Include="HPSocket\SocketInterface.h" />
+    <ClInclude Include="Login.h" />
     <ClInclude Include="Misc.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="pch.h" />
