--- a/MFCApplication4/MFCApplication4.vcxproj
+++ b/MFCApplication4/MFCApplication4.vcxproj
@@ -201,8 +201,8 @@
     <ClInclude Include="Misc.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="RemoteShell.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="ShellRemote.h" />
     <ClInclude Include="SocketServer.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -220,7 +220,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="RemoteShell.cpp" />
+    <ClCompile Include="ShellRemote.cpp" />
     <ClCompile Include="SocketServer.cpp" />
   </ItemGroup>
   <ItemGroup>
