--- a/MuaClient/MuaClient.vcxproj.filters
+++ b/MuaClient/MuaClient.vcxproj.filters
@@ -22,6 +22,12 @@
     <Filter Include="源文件\Crypto">
       <UniqueIdentifier>{4cd312dc-20e7-4b84-800f-cf5b054a41d3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="源文件\组件-远程SHELL">
+      <UniqueIdentifier>{f20941c3-d13f-4ab0-8cc6-45d85cec8453}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\组件-远程SHELL">
+      <UniqueIdentifier>{3fa900b4-9ed9-4fdc-807f-3b97242bb080}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MuaClient.cpp">
@@ -47,6 +53,9 @@
     </ClCompile>
     <ClCompile Include="Login.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ShellRemote.cpp">
+      <Filter>源文件\组件-远程SHELL</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -82,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="Login.h">
       <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ShellRemote.h">
+      <Filter>头文件\组件-远程SHELL</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
