--- a/MuaClient/MuaClient.vcxproj.filters
+++ b/MuaClient/MuaClient.vcxproj.filters
@@ -54,7 +54,10 @@
     <ClCompile Include="Login.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="ShellRemote.cpp">
+    <ClCompile Include="ModuleManage.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleShellRemote.cpp">
       <Filter>源文件\组件-远程SHELL</Filter>
     </ClCompile>
   </ItemGroup>
@@ -92,7 +95,10 @@
     <ClInclude Include="Login.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="ShellRemote.h">
+    <ClInclude Include="ModuleManage.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleShellRemote.h">
       <Filter>头文件\组件-远程SHELL</Filter>
     </ClInclude>
   </ItemGroup>
