--- a/MuaClient/MuaClient.vcxproj
+++ b/MuaClient/MuaClient.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="Crypto.cpp" />
     <ClCompile Include="Login.cpp" />
     <ClCompile Include="Misc.cpp" />
+    <ClCompile Include="ModuleManage.cpp" />
     <ClCompile Include="MuaClient.cpp" />
     <ClCompile Include="Packet.cpp" />
     <ClCompile Include="pch.cpp">
@@ -165,7 +166,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="ShellRemote.cpp" />
+    <ClCompile Include="ModuleShellRemote.cpp" />
     <ClCompile Include="SocketClient.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -177,9 +178,10 @@
     <ClInclude Include="HPSocket\SocketInterface.h" />
     <ClInclude Include="Login.h" />
     <ClInclude Include="Misc.h" />
+    <ClInclude Include="ModuleManage.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="ShellRemote.h" />
+    <ClInclude Include="ModuleShellRemote.h" />
     <ClInclude Include="SocketClient.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
