--- a/MFCApplication4/MFCApplication4.vcxproj
+++ b/MFCApplication4/MFCApplication4.vcxproj
@@ -24,7 +24,7 @@
     <Keyword>MFCProj</Keyword>
     <RootNamespace>MFCApplication4</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-    <ProjectName>Socket Test</ProjectName>
+    <ProjectName>MuaServer</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
