--- a/MFCApplication4/MFCApplication4.vcxproj
+++ b/MFCApplication4/MFCApplication4.vcxproj
@@ -199,6 +199,8 @@
     <ClInclude Include="MFCApplication4.h" />
     <ClInclude Include="MFCApplication4Dlg.h" />
     <ClInclude Include="Misc.h" />
+    <ClInclude Include="ModuleFileDownload.h" />
+    <ClInclude Include="ModuleFileUpload.h" />
     <ClInclude Include="ModuleManage.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="pch.h" />
@@ -214,6 +216,8 @@
     <ClCompile Include="MFCApplication4.cpp" />
     <ClCompile Include="MFCApplication4Dlg.cpp" />
     <ClCompile Include="Misc.cpp" />
+    <ClCompile Include="ModuleFileDownload.cpp" />
+    <ClCompile Include="ModuleFileUpload.cpp" />
     <ClCompile Include="ModuleManage.cpp" />
     <ClCompile Include="Packet.cpp" />
     <ClCompile Include="pch.cpp">
