--- a/MFCApplication4/MFCApplication4.vcxproj
+++ b/MFCApplication4/MFCApplication4.vcxproj
@@ -206,6 +206,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="ModuleShellRemote.h" />
+    <ClInclude Include="SocketClient.h" />
     <ClInclude Include="SocketServer.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -227,6 +228,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="ModuleShellRemote.cpp" />
+    <ClCompile Include="SocketClient.cpp" />
     <ClCompile Include="SocketServer.cpp" />
   </ItemGroup>
   <ItemGroup>
