--- a/MFCApplication4/MFCApplication4.vcxproj.filters
+++ b/MFCApplication4/MFCApplication4.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="RSA.h">
       <Filter>头文件\Crypto\RSA</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleFileTransfer.h">
+      <Filter>头文件\组件-文件传输</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCApplication4.cpp">
@@ -163,6 +166,9 @@
     </ClCompile>
     <ClCompile Include="RSA.cpp">
       <Filter>源文件\Crypto\RSA</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleFileTransfer.cpp">
+      <Filter>源文件\组件-文件传输</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
