--- a/MFCApplication4/MFCApplication4.vcxproj
+++ b/MFCApplication4/MFCApplication4.vcxproj
@@ -201,6 +201,7 @@
     <ClInclude Include="MFCApplication4Dlg.h" />
     <ClInclude Include="Misc.h" />
     <ClInclude Include="ModuleFileDownload.h" />
+    <ClInclude Include="ModuleFileTransfer.h" />
     <ClInclude Include="ModuleFileUpload.h" />
     <ClInclude Include="ModuleManage.h" />
     <ClInclude Include="Packet.h" />
@@ -221,6 +222,7 @@
     <ClCompile Include="MFCApplication4Dlg.cpp" />
     <ClCompile Include="Misc.cpp" />
     <ClCompile Include="ModuleFileDownload.cpp" />
+    <ClCompile Include="ModuleFileTransfer.cpp" />
     <ClCompile Include="ModuleFileUpload.cpp" />
     <ClCompile Include="ModuleManage.cpp" />
     <ClCompile Include="Packet.cpp" />
